applications/jenkins-ssh-tunnel/openeuler-hk-ssh-tunnel/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: ssh-tunnel
  name: ssh-tunnel
