applications/jenkins-ssh-tunnel/openeuler-hk-ssh-tunnel/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: ssh-tunnel
  namespace: ssh-tunnel
spec:
  ports:
  - port: 1086
    name: cn-north4-jenkins-master-port
    targetPort: 1086
    protocol: TCP
  selector:
    tunnel: jenkins
  type: ClusterIP
